--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -5417,7 +5417,7 @@ CONFIG_CP_THERMAL=m
 CONFIG_CH_EXTENSION=m
 # end of Configuration Description
 
-# CONFIG_DEBUG_SNAPSHOT is not set
+CONFIG_DEBUG_SNAPSHOT=y
 # CONFIG_PIXEL_DEBUG_TEST is not set
 CONFIG_EXYNOS_ITMON=m
 CONFIG_EXYNOS_ECC_HANDLER=m
